Changes from V8.0pl1 to V8.0pl2
===============================

Bug fixes

- "fail n" for n<>0 now works (notice that each "match term with"
  block decreases the failure level, in accordance with the intuition but
  not in conformity with the reference manual)
- See coq-bugs web page for a full list of fixed bugs (look for
  fixes in V8-0-bugfix before November ...)

Changes from V8.0 to V8.0pl1
============================

Unicode support

- Miscellaneous Mathematical Symbols-A and B, and Supplemental
  Arrows-A now supported

Bug fixes

- GPL-incompatible QPL files for CoqIde are now GPL 
- Pretty-printing of coercions to Funclass fixed and improved
- Erroneous interpretation of the quantified hypothesis in intro until fixed
- See coq-bugs web page for a full list of fixed bugs (look for
  fixes in V8-0-bugfix before July 17)

Changes from V8.0beta to V8.0
=============================

Vernacular commands

- New option "Set Printing All" to deactivate all high-level forms of
  printing (implicit arguments, coercions, destructing let,
  if-then-else, notations, projections)
- "Functional Scheme" and "Functional Induction" extended to polymorphic
  types and dependent types
- Notation now allows recursive patterns, hence recovering parts of the
  fonctionalities of pre-V8 Grammar/Syntax commands
- Command "Print." discontinued.
- Redundant syntax "Implicit Arguments On/Off" discontinued

New syntax

- Semantics change of the if-then-else construction in new syntax: 
  "if c then t1 else t2" now stands for
  "match c with c1 _ ... _ => t1 | c2 _ ... _ => t2 end"
  with no dependency of t1 and t2 in the arguments of the constructors;
  this may cause incompatibilities for files translated using coq 8.0beta

Interpretation scopes

- Delimiting key %bool for bool_scope added
- Import no more needed to activate argument scopes from a module

Tactics and the tactic Language

- Semantics of "assert" is now consistent with the reference manual